# grpcconnect

./: CMakeLists.txt  README.md
include/: common.hpp
protos/: grpcconnect.proto  grpcconnectB.proto
src/: AsyncPlatform.cpp  CMakeLists.txt  Consumer.cpp  Platform.cpp  Producer.cpp  SyncConsumer.cpp  SyncPlatform.cpp  SyncProducer.cpp
